--- a/public/home.html
+++ b/public/home.html
@@ -14,12 +14,17 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     <link href="http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="js/libs/slick-carousel/slick/slick.css">
+
+    <link rel="stylesheet" type="text/css" href="js/libs/slick-carousel/slick/slick-theme.css"/>
 </head>
 <body>
 
 <div id="mainContainer" class="container-fluid"></div>
 
 <script data-main="js/main" src="/js/libs/requirejs/require.js"></script>
+
+
 
 </body>
 </html>
